--- a/src/sass/Modules/_WhyUs.scss
+++ b/src/sass/Modules/_WhyUs.scss
@@ -1,6 +1,11 @@
-body {
-    font-family: Arial, sans-serif;
+// body {
+//     font-family: Arial, sans-serif;
+// }
+
+html, body {
+    overflow-x: hidden;
 }
+
 
 .why-us {
     width: 100%;
